--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "video-editor",
+  "name": "editor-tpl",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -15,34 +15,34 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^11.1.0",
-    "element-plus": "^2.8.4",
-    "pinia": "^2.2.4",
-    "vue": "^3.5.10",
+    "@vueuse/core": "^11.3.0",
+    "element-plus": "^2.8.8",
+    "pinia": "^2.2.6",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@eslint/js": "^9.15.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.7.4",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@types/node": "^22.9.3",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.11.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "globals": "^15.10.0",
+    "@vue/tsconfig": "^0.6.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "jsdom": "^25.0.1",
-    "npm-run-all2": "^6.2.3",
+    "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
-    "sass-embedded": "^1.79.4",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.8.0",
-    "unocss": "^0.63.2",
-    "vite": "^5.4.8",
-    "vite-plugin-vue-devtools": "^7.4.6",
-    "vitest": "^2.1.1",
-    "vue-tsc": "^2.1.6"
+    "sass-embedded": "^1.81.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.15.0",
+    "unocss": "^0.64.1",
+    "vite": "^5.4.11",
+    "vite-plugin-vue-devtools": "^7.6.4",
+    "vitest": "^2.1.5",
+    "vue-tsc": "^2.1.10"
   }
 }
