--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "donnyfe-tpl-editor",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint .",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^11.3.0",
-    "element-plus": "^2.8.8",
-    "pinia": "^2.2.6",
-    "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.9.3",
-    "@vitejs/plugin-vue": "^5.2.0",
-    "@vitejs/plugin-vue-jsx": "^4.1.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.6.0",
-    "eslint": "^9.15.0",
-    "eslint-plugin-vue": "^9.31.0",
-    "globals": "^15.12.0",
-    "jsdom": "^25.0.1",
-    "npm-run-all2": "^7.0.1",
-    "prettier": "^3.3.3",
-    "sass-embedded": "^1.81.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.15.0",
-    "unocss": "^0.64.1",
-    "vite": "^5.4.11",
-    "vite-plugin-vue-devtools": "^7.6.4",
-    "vitest": "^2.1.5",
-    "vue-tsc": "^2.1.10"
-  }
+		"name": "editor-template",
+		"version": "0.0.0",
+		"private": true,
+		"type": "module",
+		"scripts": {
+				"dev": "vite",
+				"build": "run-p type-check \"build-only {@}\" --",
+				"preview": "vite preview",
+				"test:unit": "vitest",
+				"build-only": "vite build",
+				"type-check": "vue-tsc --build --force",
+				"lint": "eslint .",
+				"format": "prettier --write src/"
+		},
+		"dependencies": {
+				"@element-plus/icons-vue": "^2.3.1",
+				"@vueuse/core": "^13.1.0",
+				"element-plus": "^2.9.9",
+				"pinia": "^3.0.2",
+				"vue": "^3.5.13",
+				"vue-router": "^4.5.1"
+		},
+		"devDependencies": {
+				"@eslint/js": "^9.25.1",
+				"@tsconfig/node20": "^20.1.5",
+				"@types/jsdom": "^21.1.7",
+				"@types/node": "^22.15.3",
+				"@vitejs/plugin-vue": "^5.2.3",
+				"@vitejs/plugin-vue-jsx": "^4.1.2",
+				"@vue/test-utils": "^2.4.6",
+				"@vue/tsconfig": "^0.7.0",
+				"eslint": "^9.25.1",
+				"eslint-plugin-vue": "^10.0.0",
+				"globals": "^16.0.0",
+				"jsdom": "^26.1.0",
+				"npm-run-all2": "^7.0.2",
+				"prettier": "^3.5.3",
+				"sass-embedded": "^1.87.0",
+				"typescript": "~5.8.3",
+				"typescript-eslint": "^8.31.1",
+				"unocss": "66.1.0-beta.12",
+				"vite": "^6.3.3",
+				"vite-plugin-vue-devtools": "^7.7.6",
+				"vitest": "^3.1.2",
+				"vue-tsc": "^2.2.10"
+		}
 }
